creditas-sf/force-app/main/default/objects/AccountFinancialRelationship__c/AccountFinancialRelationship__c.object-meta.xml
<CustomObject>
    <label>Relações Financeiras</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Relações Financeiras</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountFinancialRelationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>