creditas-sf/force-app/main/default/objects/AccountFinancialRelationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recursos Financeiros</relationshipLabel>
    <relationshipName>AccountFinancialRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>