creditas-sf/force-app/main/default/objects/AccountFinancialRelationship__c/fields/auxResourceType__c.field-meta.xml
<CustomField>
    <fullName>auxResourceType__c</fullName>
    <description>Campo auxiliar para utilização no flow - [OpportunityRole] Preencher campo Renda informada</description>
    <formula>TEXT(Recurso_Financeiro__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Recurso</label>
    <type>Text</type>
</CustomField>