creditas-sf/force-app/main/default/objects/AccountFinancialRelationship__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <formula>TEXT(Recurso_Financeiro__r.Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem</label>
    <type>Text</type>
</CustomField>