creditas-sf/force-app/main/default/objects/AccountFinancialRelationship__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <formula>Recurso_Financeiro__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>